Bug 1216349: Upload the old valid region as well if our texture host changed. r=nical a=lizzard